@@ -347,7 +347,7 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_icon				{position:absolute; top:28px; left:-40px;}
 .search_method_text			{color:#000; font-size:14px; line-height:16px;}	/*	Methodology explained in resulting pages after search query	*/
 .search_method_text a		{color:#000; font-weight:bold;}
-.search_method_text a:hover	{text-decoration:underline;}
+.search_method_text a:hover	{color:#000; text-decoration:underline;}
 
 .search_glossary_wrap		{margin-top:10px; position:relative; width:960px; margin:0 auto;}
 .search_glossary			{padding:20px 30px; box-sizing:border-box; width:960px; margin:0 auto; border:1px solid #000; font-size:1.1em; line-height:1.5em; margin-bottom:15px;}
