@@ -6,6 +6,7 @@ Update css
 Update conditions
 Fix new SAVi clashes
 Update print-friendly new SAVi
+Update transaction table fonts
 
 
 Development Portal (2020-04-18 shi)
